--- a/Videos/Base.lproj/Main.storyboard
+++ b/Videos/Base.lproj/Main.storyboard
@@ -20,10 +20,14 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aa0-00-TBT" customClass="PlayerView" customModule="Videos" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="20" width="375" height="313.5"/>
+                                <rect key="frame" x="2" y="22" width="371" height="311.5"/>
                                 <subviews>
+                                    <view userInteractionEnabled="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Kue-FV-Kq4">
+                                        <rect key="frame" x="0.0" y="0.0" width="371" height="311.5"/>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    </view>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9YY-Ls-Cb0">
-                                        <rect key="frame" x="162.5" y="132" width="50" height="50"/>
+                                        <rect key="frame" x="160.5" y="131" width="50" height="50"/>
                                         <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="50" id="V4e-fo-Wha"/>
@@ -39,12 +43,24 @@
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstItem="9YY-Ls-Cb0" firstAttribute="centerY" secondItem="aa0-00-TBT" secondAttribute="centerY" id="6IT-dc-aLG"/>
+                                    <constraint firstAttribute="bottom" secondItem="Kue-FV-Kq4" secondAttribute="bottom" id="NSw-z6-YAw"/>
+                                    <constraint firstItem="Kue-FV-Kq4" firstAttribute="leading" secondItem="aa0-00-TBT" secondAttribute="leading" id="gbX-eP-Z19"/>
+                                    <constraint firstAttribute="trailing" secondItem="Kue-FV-Kq4" secondAttribute="trailing" id="hUZ-Zy-4Mt"/>
+                                    <constraint firstItem="Kue-FV-Kq4" firstAttribute="top" secondItem="aa0-00-TBT" secondAttribute="top" id="tEK-bP-qmH"/>
                                     <constraint firstItem="9YY-Ls-Cb0" firstAttribute="centerX" secondItem="aa0-00-TBT" secondAttribute="centerX" id="vJM-fH-dgZ"/>
                                 </constraints>
+                                <connections>
+                                    <outlet property="borderView" destination="Kue-FV-Kq4" id="0aD-PW-TFi"/>
+                                    <outlet property="btnAdd" destination="9YY-Ls-Cb0" id="pei-uF-sHE"/>
+                                </connections>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="OE7-K1-RkC" customClass="PlayerView" customModule="Videos" customModuleProvider="target">
                                 <rect key="frame" x="50" y="383.5" width="275" height="163.5"/>
                                 <subviews>
+                                    <view userInteractionEnabled="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mqr-bT-nqr">
+                                        <rect key="frame" x="0.0" y="0.0" width="275" height="163.5"/>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    </view>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aIh-rF-Lma">
                                         <rect key="frame" x="112.5" y="57" width="50" height="50"/>
                                         <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -61,9 +77,17 @@
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
+                                    <constraint firstItem="mqr-bT-nqr" firstAttribute="top" secondItem="OE7-K1-RkC" secondAttribute="top" id="1Ac-Tm-g1y"/>
                                     <constraint firstItem="aIh-rF-Lma" firstAttribute="centerX" secondItem="OE7-K1-RkC" secondAttribute="centerX" id="Qji-rB-g3c"/>
+                                    <constraint firstAttribute="trailing" secondItem="mqr-bT-nqr" secondAttribute="trailing" id="lSD-PB-6ru"/>
+                                    <constraint firstItem="mqr-bT-nqr" firstAttribute="leading" secondItem="OE7-K1-RkC" secondAttribute="leading" id="nly-z1-bhC"/>
+                                    <constraint firstAttribute="bottom" secondItem="mqr-bT-nqr" secondAttribute="bottom" id="qdP-h0-Xb7"/>
                                     <constraint firstItem="aIh-rF-Lma" firstAttribute="centerY" secondItem="OE7-K1-RkC" secondAttribute="centerY" id="yAK-2U-oOf"/>
                                 </constraints>
+                                <connections>
+                                    <outlet property="borderView" destination="mqr-bT-nqr" id="oNt-sW-O1l"/>
+                                    <outlet property="btnAdd" destination="aIh-rF-Lma" id="ejg-iQ-Df9"/>
+                                </connections>
                             </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="n3u-Zq-rNA">
                                 <rect key="frame" x="170.5" y="597" width="34" height="30"/>
@@ -79,11 +103,11 @@
                             <constraint firstItem="n3u-Zq-rNA" firstAttribute="top" secondItem="OE7-K1-RkC" secondAttribute="bottom" constant="50" id="7S9-QA-OTj"/>
                             <constraint firstItem="OE7-K1-RkC" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="50" id="7q4-3w-CZP"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="n3u-Zq-rNA" secondAttribute="bottom" constant="40" id="8pT-UD-0NC"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="aa0-00-TBT" secondAttribute="trailing" id="FhF-xZ-VBo"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="aa0-00-TBT" secondAttribute="trailing" constant="2" id="FhF-xZ-VBo"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="OE7-K1-RkC" secondAttribute="trailing" constant="50" id="MaC-at-yqm"/>
-                            <constraint firstItem="aa0-00-TBT" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="Pn0-NR-VLr"/>
+                            <constraint firstItem="aa0-00-TBT" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="2" id="Pn0-NR-VLr"/>
                             <constraint firstItem="aa0-00-TBT" firstAttribute="bottom" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="e3C-Iq-lro"/>
-                            <constraint firstItem="aa0-00-TBT" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="fSZ-SV-MLc"/>
+                            <constraint firstItem="aa0-00-TBT" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="2" id="fSZ-SV-MLc"/>
                             <constraint firstItem="OE7-K1-RkC" firstAttribute="top" secondItem="aa0-00-TBT" secondAttribute="bottom" constant="50" id="zgO-HD-QAT"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
